ui-tests/tests/ui/missing_field3.stderr
error: missing field `options`
 --> tests/ui/missing_field3.rs:6:14
  |
6 |   #[annotation {
  |  ______________^
7 | |     string = "hey"
8 | | }]
  | |_^
