ui-tests/tests/ui/missing_field3.rs
// Copyright 2020 Oxide Computer Company

use testlib::outer;

#[outer]
#[annotation {
    string = "hey"
}]
fn test() {}

fn main() {}
